// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal ProfileModal should match snapshot 1`] = `
<Modal
  afterClose={[MockFunction]}
  size="medium"
  title="Ms Saoirse Chadwick"
  visible={true}
>
  <div>
    <ProfileInformationWithRedux
      id="123"
    />
  </div>
</Modal>
`;

exports[`Modal renderContent should return Profile 1`] = `
<div>
  <ProfileInformationWithRedux
    id="123"
  />
</div>
`;
